--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.1.3",
+    "firebase": "^9.14.0",
     "next": "13.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
